# SCRIPTMETODOLOGICO

./: .gitignore  .zenodo.json  CITATION.cff  LICENSE  README.md  pyproject.toml  requirements.txt  walkthrough.md
.github/workflows/: ci.yml
src/bibliometric_analyzer/: cli.py  lineage_engine.py  matrix_generator.py  openalex_client.py  pubmed_client.py  r_bridge.py  scopus_client.py  themes.py  utils.py  visualizer.py
tests/: test_analyzer.py
